mitls-ci-e23565d2-8142.err
Warning: you are using the standard library and/or the %inline keyword. We
recommend switching on --infer in order to avoid obscure type error messages.
File "src/basic/ml/FStar_Util.ml", line 47, characters 57-65:
Warning 40: st_mtime was selected from type BatUnix.stats.
It is not visible in the current scope, and will not 
be selected if the type becomes unknown.
File "src/basic/ml/FStar_Util.ml", line 47, characters 57-65:
Warning 40: st_mtime was selected from type BatUnix.stats.
It is not visible in the current scope, and will not 
be selected if the type becomes unknown.
make[3]: warning: jobserver unavailable: using -j1.  Add '+' to parent make rule.
make[3]: warning: jobserver unavailable: using -j1.  Add '+' to parent make rule.
Extracted.mk:96: warning: overriding recipe for target 'mitls.cmxa'
Makefile:193: warning: ignoring old recipe for target 'mitls.cmxa'
Extracted.mk:99: warning: overriding recipe for target 'mitls.exe'
Makefile:195: warning: ignoring old recipe for target 'mitls.exe'
Extracted.mk:96: warning: overriding recipe for target 'mitls.cmxa'
Makefile:193: warning: ignoring old recipe for target 'mitls.cmxa'
Extracted.mk:99: warning: overriding recipe for target 'mitls.exe'
Makefile:195: warning: ignoring old recipe for target 'mitls.exe'
Unexpected error
FStar_Errors.Error(_)
Raised by primitive operation at file "src/ocaml-output/FStar_TypeChecker_TcTerm.ml", line 3553, characters 37-59
Called from file "src/ocaml-output/FStar_TypeChecker_TcTerm.ml", line 1457, characters 22-108
Called from file "src/ocaml-output/FStar_TypeChecker_TcTerm.ml", line 5422, characters 21-1023
Called from file "src/ocaml-output/FStar_TypeChecker_TcTerm.ml", line 4706, characters 12-51
Called from file "src/ocaml-output/FStar_TypeChecker_TcTerm.ml", line 4081, characters 49-75
Called from file "src/batList.mlv", line 171, characters 23-28
Called from file "src/ocaml-output/bootlibs/FStar_All.ml", line 3, characters 21-24
Called from file "src/ocaml-output/FStar_TypeChecker_TcTerm.ml", line 4731, characters 22-44
Called from file "src/ocaml-output/FStar_TypeChecker_TcTerm.ml", line 2756, characters 22-1023
Called from file "src/ocaml-output/FStar_TypeChecker_TcTerm.ml", line 5422, characters 21-1023
Called from file "src/ocaml-output/FStar_TypeChecker_TcTerm.ml", line 4541, characters 27-59
Called from file "src/ocaml-output/FStar_TypeChecker_Tc.ml", line 3694, characters 20-1023
Called from file "src/ocaml-output/FStar_TypeChecker_Tc.ml", line 4076, characters 31-46
Called from file "src/basic/ml/FStar_Util.ml", line 572, characters 30-37
Called from file "src/ocaml-output/FStar_TypeChecker_Tc.ml", line 4122, characters 8-70
Called from file "src/ocaml-output/FStar_TypeChecker_Tc.ml", line 4210, characters 25-77
Called from file "src/ocaml-output/FStar_TypeChecker_Tc.ml", line 4477, characters 23-49
Called from file "src/basic/ml/FStar_Util.ml", line 44, characters 14-18
Called from file "src/ocaml-output/FStar_Universal.ml", line 287, characters 34-233
Called from file "list.ml", line 84, characters 24-34
Called from file "src/ocaml-output/bootlibs/FStar_All.ml", line 3, characters 21-24
Called from file "src/ocaml-output/FStar_Universal.ml", line 398, characters 18-65
Called from file "src/ocaml-output/FStar_Universal.ml", line 421, characters 31-72
Called from file "src/ocaml-output/FStar_Universal.ml", line 437, characters 24-71
Called from file "src/ocaml-output/FStar_Universal.ml", line 477, characters 27-69
Called from file "src/ocaml-output/FStar_Main.ml", line 204, characters 27-67
Called from file "src/ocaml-output/FStar_Main.ml", line 226, characters 6-11

.\Handshake.fst(298,53-298,63): (Error) Too many arguments to function of type uu___33501:t region Client -> uu___33502:option clientKeyShare -> FStar.ST.St offer; got 3 arguments
1 error was reported (see above)
Unexpected error
FStar_Errors.Error(_)
Raised by primitive operation at file "src/ocaml-output/FStar_TypeChecker_TcTerm.ml", line 3553, characters 37-59
Called from file "src/ocaml-output/FStar_TypeChecker_TcTerm.ml", line 1457, characters 22-108
Called from file "src/ocaml-output/FStar_TypeChecker_TcTerm.ml", line 5422, characters 21-1023
Called from file "src/ocaml-output/FStar_TypeChecker_TcTerm.ml", line 4706, characters 12-51
Called from file "src/ocaml-output/FStar_TypeChecker_TcTerm.ml", line 4081, characters 49-75
Called from file "src/batList.mlv", line 171, characters 23-28
Called from file "src/ocaml-output/bootlibs/FStar_All.ml", line 3, characters 21-24
Called from file "src/ocaml-output/FStar_TypeChecker_TcTerm.ml", line 4731, characters 22-44
Called from file "src/ocaml-output/FStar_TypeChecker_TcTerm.ml", line 2756, characters 22-1023
Called from file "src/ocaml-output/FStar_TypeChecker_TcTerm.ml", line 5422, characters 21-1023
Called from file "src/ocaml-output/FStar_TypeChecker_TcTerm.ml", line 4541, characters 27-59
Called from file "src/ocaml-output/FStar_TypeChecker_Tc.ml", line 3694, characters 20-1023
Called from file "src/ocaml-output/FStar_TypeChecker_Tc.ml", line 4076, characters 31-46
Called from file "src/basic/ml/FStar_Util.ml", line 572, characters 30-37
Called from file "src/ocaml-output/FStar_TypeChecker_Tc.ml", line 4122, characters 8-70
Called from file "src/ocaml-output/FStar_TypeChecker_Tc.ml", line 4210, characters 25-77
Called from file "src/ocaml-output/FStar_TypeChecker_Tc.ml", line 4477, characters 23-49
Called from file "src/basic/ml/FStar_Util.ml", line 44, characters 14-18
Called from file "src/ocaml-output/FStar_Universal.ml", line 287, characters 34-233
Called from file "list.ml", line 84, characters 24-34
Called from file "src/ocaml-output/bootlibs/FStar_All.ml", line 3, characters 21-24
Called from file "src/ocaml-output/FStar_Universal.ml", line 398, characters 18-65
Called from file "src/ocaml-output/FStar_Universal.ml", line 421, characters 31-72
Called from file "src/ocaml-output/FStar_Universal.ml", line 437, characters 24-71
Called from file "src/ocaml-output/FStar_Universal.ml", line 477, characters 27-69
Called from file "src/ocaml-output/FStar_Main.ml", line 204, characters 27-67
Called from file "src/ocaml-output/FStar_Main.ml", line 226, characters 6-11

.\Handshake.fst(298,53-298,63): (Error) Too many arguments to function of type uu___33501:t region Client -> uu___33502:option clientKeyShare -> FStar.ST.St offer; got 3 arguments
1 error was reported (see above)
File "_none_", line 1:
Error: Files FStar_String.cmx and FStar_List.cmx
make inconsistent assumptions over interface FStar_List
make[4]: *** [Makefile:30: all] Error 2
make[3]: *** [Extracted.mk:53: C:/Build/Agent2/_work/2/s/fstar/ulib/ml/fstarlib.cmxa] Error 2
File "_none_", line 1:
Error: Files FStar_String.cmx and FStar_List.cmx
make inconsistent assumptions over interface FStar_List
make[4]: *** [Makefile:30: all] Error 2
make[3]: *** [Extracted.mk:53: C:/Build/Agent2/_work/2/s/fstar/ulib/ml/fstarlib.cmxa] Error 2
ffi.c:1:0: warning: -fPIC ignored for target (all code is position independent)
#include <stdio.h>
^
ffi.c:1:0: warning: -fPIC ignored for target (all code is position independent)
#include <stdio.h>
^
File "output/FFI.ml", line 10, characters 2-12:
Error: Unbound module TLSInfo
File "output/FFI.ml", line 10, characters 2-12:
Error: Unbound module TLSInfo
make[3]: *** [Extracted.mk:69: output/FFI.cmx] Error 2
make[3]: *** [Extracted.mk:69: output/FFI.cmx] Error 2
File "output/TestAPI.ml", line 10, characters 19-40:
Error: Unbound module Connection
File "output/TestAPI.ml", line 10, characters 19-40:
Error: Unbound module Connection
make[3]: *** [Extracted.mk:69: output/TestAPI.cmx] Error 2
make[3]: *** [Extracted.mk:69: output/TestAPI.cmx] Error 2
File "output/TestFFI.ml", line 16, characters 17-38:
Error: Unbound module Connection
make[3]: *** [Extracted.mk:69: output/TestFFI.cmx] Error 2
File "output/TestFFI.ml", line 16, characters 17-38:
Error: Unbound module Connection
make[3]: *** [Extracted.mk:69: output/TestFFI.cmx] Error 2
File "test/mitls.ml", line 2, characters 5-17:
Error: Unbound module TLSConstants
File "test/mitls.ml", line 2, characters 5-17:
Error: Unbound module TLSConstants
make[3]: *** [Extracted.mk:69: test/mitls.cmx] Error 2
make[3]: Target 'mitls.exe' not remade because of errors.
make[3]: *** [Extracted.mk:69: test/mitls.cmx] Error 2
make[3]: Target 'mitls.exe' not remade because of errors.
make[2]: *** [Makefile:199: C:/Build/Agent2/_work/2/s/fstar/ulib/ml/fstarlib.cmxa] Error 2
make[2]: *** [Makefile:199: ../../libs/ffi/FFICallbacks.cmxa] Error 2
make[2]: Target 'mitls.exe' not remade because of errors.
make[1]: *** [Makefile:26: build] Error 2
make: *** [Makefile:22: all] Error 2
